# miappe-linkml

./: .copier-answers.yml  .pre-commit-config.yaml  .yamllint.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
about/: index.html
docs/: about.md  index.md
elements/: index.html
elements/BiologicalMaterial/: index.html
elements/Boolean/: index.html
elements/Curie/: index.html
elements/DataFile/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/EnvironmentParameter/: index.html
elements/Event/: index.html
elements/ExperimentalFactor/: index.html
elements/ExperimentalFactorTypeEnum/: index.html
elements/Float/: index.html
elements/GeoReferenced/: index.html
elements/Integer/: index.html
elements/Investigation/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/LicenseEnum/: index.html
elements/MaterialSource/: index.html
elements/Method/: index.html
elements/NamedThing/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
elements/Objectidentifier/: index.html
elements/ObservationUnit/: index.html
elements/ObservationUnitTypeEnum/: index.html
elements/ObservedVariable/: index.html
elements/Person/: index.html
elements/PersonCollection/: index.html
elements/PersonStatus/: index.html
elements/Publication/: index.html
elements/Sample/: index.html
elements/Scale/: index.html
elements/Sparqlpath/: index.html
elements/String/: index.html
elements/Study/: index.html
elements/Time/: index.html
elements/Trait/: index.html
elements/Uri/: index.html
elements/Uriorcurie/: index.html
examples/: Investigation-maize.yaml  README.md
schema/: miappe_linkml.yaml
search/: search_index.json
src/: README.md
tests/: __init__.py  test_data.py
(+206 files in other folders)
